--- a/src/enriching and cleaning.ipynb
+++ b/src/enriching and cleaning.ipynb
@@ -17,8 +17,7 @@
    "source": [
     "import pandas as pd\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "# import re"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "491db396",
+   "id": "f5c2a445",
    "metadata": {},
    "source": [
     "## Explore table"
@@ -217,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "949d3a85",
+   "id": "473e86be",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26017502",
+   "id": "484cc694",
    "metadata": {},
    "source": [
     "## Explore data and its cohesiveness"
@@ -268,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "14e15da0",
+   "id": "e2e8bf62",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "449b9fcb",
+   "id": "1238cdaf",
    "metadata": {
     "scrolled": true
    },
@@ -331,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2d232538",
+   "id": "eac9d492",
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ace88212",
+   "id": "19433766",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d43083f6",
+   "id": "e80d3366",
    "metadata": {},
    "source": [
     "## Cleaning"
@@ -485,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7526a538",
+   "id": "37d579c8",
    "metadata": {
     "scrolled": true
    },
@@ -497,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a7b238ec",
+   "id": "41884203",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "71ed29fc",
+   "id": "931ddbdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2708,7 +2707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d00ee37",
+   "id": "d9bdf0e6",
    "metadata": {},
    "source": [
     "## Get authors"
@@ -3762,7 +3761,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a39d76ea",
+   "id": "0e1b48af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3771,7 +3770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ec6db44",
+   "id": "fe898212",
    "metadata": {},
    "source": [
     "## Get secondary links to obtain other data"
@@ -3945,7 +3944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec206645",
+   "id": "9861cefe",
    "metadata": {},
    "source": [
     "## Get genres"
@@ -3954,7 +3953,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "17cbedbb",
+   "id": "a01c98a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3971,7 +3970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3da9238e",
+   "id": "61f61e3c",
    "metadata": {},
    "source": [
     "## Get editorial"
@@ -3980,7 +3979,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "db525409",
+   "id": "a456c07f",
    "metadata": {},
    "outputs": [
     {
@@ -4019,7 +4018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e148b738",
+   "id": "46b7014c",
    "metadata": {},
    "source": [
     "## Get country"
@@ -4028,7 +4027,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ee9d2dbb",
+   "id": "56aa5691",
    "metadata": {},
    "outputs": [
     {
@@ -4067,7 +4066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec466f75",
+   "id": "d296f829",
    "metadata": {},
    "source": [
     "## Get language"
@@ -4076,7 +4075,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "48e809ef",
+   "id": "8808a0ce",
    "metadata": {},
    "outputs": [
     {
@@ -4115,7 +4114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e399193",
+   "id": "23efd6be",
    "metadata": {},
    "source": [
     "## Get original language"
@@ -4124,7 +4123,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5ae1392f",
+   "id": "8dffd980",
    "metadata": {},
    "outputs": [
     {
@@ -4163,7 +4162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "769f33b8",
+   "id": "1a49b3a3",
    "metadata": {},
    "source": [
     "## Get pages"
@@ -4172,7 +4171,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "40739bc2",
+   "id": "8fe00608",
    "metadata": {},
    "outputs": [
     {
@@ -4211,7 +4210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1878d896",
+   "id": "9a052fdc",
    "metadata": {},
    "source": [
     "## Get dates"
@@ -4301,7 +4300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20dbb0bd",
+   "id": "86afedb4",
    "metadata": {},
    "source": [
     "## Web scrapping functions"
@@ -4326,7 +4325,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a4a53b5d",
+   "id": "8474b96b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4340,7 +4339,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6b4d09f6",
+   "id": "8e934b80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4354,7 +4353,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "83562d15",
+   "id": "2b73b03c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4369,7 +4368,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "567957c9",
+   "id": "bf55d2b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4390,7 +4389,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "35d035b0",
+   "id": "d157565e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4410,7 +4409,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1da1a9e8",
+   "id": "385440f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4430,7 +4429,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0f6a6147",
+   "id": "15efcc3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4450,7 +4449,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0b21b07d",
+   "id": "ce31db77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4470,7 +4469,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6b073fba",
+   "id": "58c3227b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4490,7 +4489,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "7bfe3b4a",
+   "id": "ce3f4237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4510,7 +4509,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "55db553f",
+   "id": "ce036bcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4524,7 +4523,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "99a6482f",
+   "id": "61a8af2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4538,7 +4537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cccffd33",
+   "id": "cada9c22",
    "metadata": {},
    "source": [
     "## Looping through 10 pages"
@@ -4547,7 +4546,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "c1435b35",
+   "id": "c8ccf04c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4557,7 +4556,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "913501c4",
+   "id": "55efe3f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4567,7 +4566,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "16d5df37",
+   "id": "bbf9893e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4580,7 +4579,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "342851ac",
+   "id": "994b3264",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4593,7 +4592,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "7189a445",
+   "id": "a70a316f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4606,7 +4605,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "57ab15ca",
+   "id": "6c630f8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4619,7 +4618,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "539953a4",
+   "id": "8121fbff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4632,7 +4631,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "5ba223a8",
+   "id": "f7576e25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4645,7 +4644,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "432fbd44",
+   "id": "c44c9cfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4658,7 +4657,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "6f40fdf1",
+   "id": "6bdb9ec8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4671,7 +4670,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "44327a86",
+   "id": "d20950a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4684,7 +4683,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "4eaabdaa",
+   "id": "beb9d5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4698,7 +4697,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "4af2b9ed",
+   "id": "d3a93307",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4718,7 +4717,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "ae054067",
+   "id": "0bcf63ac",
    "metadata": {},
    "outputs": [
     {
@@ -4971,7 +4970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "066feba3",
+   "id": "ff6aecdd",
    "metadata": {},
    "source": [
     "### Functions to gather the data and create the df"
@@ -4980,7 +4979,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "03bd2ed9",
+   "id": "e4e018aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5061,7 +5060,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "4c426724",
+   "id": "e8325ef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5085,7 +5084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7ec706",
+   "id": "0a84fe03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5106,7 +5105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb8adc95",
+   "id": "932c5767",
    "metadata": {},
    "outputs": [],
    "source": []
